[tool.poetry]
name = "treehous"
version = "0.1.0"
description = ""
authors = ["Alex Azevedo <alexndreazevedo@gmail.com>"]
readme = "README.md"
packages = [{include = "api"}]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
pydantic = {extras = ["email"], version = "^2.9.2"}
flask-jwt-extended = "^4.6.0"
dynaconf = "^3.2.6"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
